[package]
name = "polars_kde"
edition = "2021"
version = "0.1.0"

[lib]
name = "polars_kde"
crate-type = ["cdylib"]

[dependencies]
kernel-density-estimation = "0.2.0"
polars = { version = "0.43.1" }
polars-core = { version = "0.43.1", features = ["dtype-array"] }
polars-lazy = "0.43.1"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.17.0", features = ["derive", "dtype-array"] }
serde = { version = "1.0.218", features = ["derive"] }
